# lang-impl-playground

./: .gitignore  README.md
arith_evaluator/: README.md  arith_evaluator.opam  dune-project
arith_evaluator/lib/: arith_evaluator.ml  ast.ml  dune  evaluator.ml  lexer.ml  parser.ml
arith_evaluator/test/: dune
arith_evaluator_rs/: Cargo.toml  README.md
arith_evaluator_rs/src/: ast.rs  eval.rs  lexer.rs  main.rs  parser.rs
basic/: README.md  dune-project
basic/docs/: specification.md
basic/examples/: factorial.bas
basic/lib/: basic.ml  dune
basic/test/: dune
